# dotfiles

./: .gitignore  Brewfile  Brewfile.local  Brewfile.local.lock.json  Cargo.toml  LICENSE  README.md
.cursor/rules/: commit-message.mdc
.git-cfg/: .gitconfig.local
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  label.yml  labeler.yml  release-homebrew.yml  shell_check.yaml
git/: .gitconfig
iterm2/: com.googlecode.iterm2.plist
scripts/: bootstrap.sh  bootstrap.zsh  configuration.sh  configuration.zsh  system  system.zsh
src/: config.rs  logging.rs  main.rs  package.rs  tools.rs
src/app/: .gitignore  actions.rs  app_actions.rs  app_events.rs  app_ui.rs  dotfiles.rs  dotfiles_actions.rs  dotfiles_events.rs  dotfiles_ui.rs  events.rs  execute.rs  execute_actions.rs  execute_events.rs  execute_log.rs  execute_menu.rs  execute_ui.rs  menu.rs  mod.rs  tabs.rs  tabs_ui.rs  ui.rs  workflow.rs  workflow_actions.rs  workflow_events.rs  workflow_log.rs  workflow_menu.rs  workflow_ui.rs
src/app/snapshots/: dotfiles__app__app_ui__tests__snapshot_app_dotfiles_tab_with_tools.snap  dotfiles__app__app_ui__tests__snapshot_app_workflow_tab_with_tools.snap  dotfiles__app__dotfiles_ui__tests__snapshot_dotfiles_empty_menu.snap  dotfiles__app__dotfiles_ui__tests__snapshot_dotfiles_empty_script.snap  dotfiles__app__dotfiles_ui__tests__snapshot_dotfiles_menu_focused.snap  dotfiles__app__dotfiles_ui__tests__snapshot_dotfiles_script_focused.snap  (+11 more)
zsh/: .alias.zsh  .local.zsh  .path.zsh  .terminal.zsh  .zshrc
(+6 files in other folders)
