[package]
name = "dotfiles"
version = "0.1.0"
description = "manage dotfiles"
authors = ["TomoyukiSugiyama <s_tomoyuki07@yahoo.co.jp>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "process", "io-util", "macros"] }
strum = { version = "0.26", features = ["derive"] }
