[package]
name = "dotfiles"
version = "0.1.0"
description = "manage dotfiles"
authors = ["TomoyukiSugiyama <s_tomoyuki07@yahoo.co.jp>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "process", "io-util", "macros"] }
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.128"
clap = { version = "4.5.20", features = ["derive"] }
sha2 = "0.10.8"
flate2 = { version = "1.0.35", features = ["zlib"] }
tar = "0.4.43"
dialoguer = "0.11.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde", "std"] }
tempfile = "3.13.0"
thiserror = "1.0.64"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
hex = "0.4.3"
walkdir = "2.5.0"
